# GraphicsEngine

./: .gitignore  CMakeLists.txt  README.md
cimg_lib/: CMakeLists copy.txt  CMakeLists.txt
include/: camera.h  definitions.h  engine.h  fireworks.h  object.h  particle_sim.h  vector.h
matrix_lib/: CMakeLists.txt
matrix_lib/include/: euler_angles.h  matrix.h  point.h  quaternion.h  rotation.h  rotmat.h  rotvec.h  vector.h
matrix_lib/test/: matrix_test.cpp  rotmat_test.cpp  rotvec_test.cpp  vector_test.cpp
src/: camera.cpp  engine.cpp  fireworks.cpp  main.cpp  object.cpp  particle_sim.cpp  robot_arm_sim.cpp  view3D.cpp
test/: veclib_test.cpp
