# Everything from this: https://stackoverflow.com/questions/38903996/cimg-x11-linking-error-using-clion-and-cmake
cmake_minimum_required(VERSION 3.10)
project(CImgProject)

set(CMAKE_CXX_STANDARD 17)

add_library(CImgProject INTERFACE)
target_include_directories(CImgProject INTERFACE include)
# You can alter these according to your needs, e.g if you don't need to display images - set(YOU_NEED_X11 0)
set(YOU_NEED_X11 1)
set(YOU_NEED_PNG 1)
set(YOU_NEED_JPG 1)
set(YOU_NEED_THREADS 1)

if(${YOU_NEED_THREADS} EQUAL 1)
    message(STATUS "Looking for Threads...")
    find_package(Threads REQUIRED)
    #include_directories(${CMAKE_THREAD_LIBS_INIT})
    target_link_libraries(CImgProject INTERFACE ${CMAKE_THREAD_LIBS_INIT})
else()
    target_compile_definitions(CImgProject PRIVATE cimg_display=0)
endif()

if(${YOU_NEED_X11} EQUAL 1)
    message(STATUS "Looking for X11...")
    find_package(X11 REQUIRED)
    include_directories(${X11_INCLUDE_DIR})
    target_link_libraries(CImgProject INTERFACE ${X11_LIBRARIES})
else()
    target_compile_definitions(CImgProject PRIVATE cimg_display=0)
endif()

if(${YOU_NEED_JPG} EQUAL 1)
    message(STATUS "Looking for libjpg...")
    find_package(JPEG REQUIRED)
    include_directories(${JPEG_INCLUDE_DIR})
    target_link_libraries (CImgProject INTERFACE ${JPEG_LIBRARY})
    target_compile_definitions(CImgProject INTERFACE cimg_use_jpeg=1)
endif()

if(${YOU_NEED_PNG} EQUAL 1)
    message(STATUS "Looking for libpng...")
    find_package(PNG REQUIRED)
    include_directories(${PNG_INCLUDE_DIR})
    target_link_libraries (CImgProject INTERFACE ${PNG_LIBRARY})
    target_compile_definitions(CImgProject INTERFACE cimg_use_png=1)
endif()